editor attempt #1, with react-ace

--- a/.flint/index.html
+++ b/.flint/index.html
@@ -11,5 +11,7 @@
 <body>
   <div id="_flintapp"></div>
   <!-- SCRIPTS -->
+  <script src="/static/theme-github.js" type="text/javascript" charset="utf-8"></script>
+  <script src="/static/mode-markdown.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
