--- a/.motion/index.html
+++ b/.motion/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/png" href="/static/favicon.png" />
 </head>
 <body>
-  <div id="_flintapp"></div>
+  <div id="_motionapp"></div>
   <!-- SCRIPTS -->
 </body>
 </html>
